// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkTextInput should apply user-styling correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      Object {
        "backgroundColor": "blue",
        "width": 200,
      },
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`iOS BpkTextInput should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
    ]
  }
>
  <TextInput
    editable={true}
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`iOS BpkTextInput should render disabled correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
    ]
  }
>
  <TextInput
    editable={false}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
        Object {
          "color": "rgb(230, 228, 235)",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`iOS BpkTextInput should render invalid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
        Object {
          "tintColor": "rgb(255, 84, 82)",
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkTextInput should render placeholder correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
        Object {
          "fontStyle": "italic",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`iOS BpkTextInput should render small correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      Object {
        "height": 30,
        "paddingLeft": 8,
        "paddingRight": 8,
      },
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 13,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`iOS BpkTextInput should render small disabled correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      Object {
        "height": 30,
        "paddingLeft": 8,
        "paddingRight": 8,
      },
    ]
  }
>
  <TextInput
    editable={false}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 13,
        },
        Object {
          "color": "rgb(230, 228, 235)",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
</View>
`;

exports[`iOS BpkTextInput should render small invalid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      Object {
        "height": 30,
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 13,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
        Object {
          "height": 16,
          "width": 16,
        },
        Object {
          "tintColor": "rgb(255, 84, 82)",
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkTextInput should render small placeholder correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      Object {
        "height": 30,
        "paddingLeft": 8,
        "paddingRight": 8,
      },
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 13,
        },
        Object {
          "fontStyle": "italic",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`iOS BpkTextInput should render small valid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      Object {
        "height": 30,
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
        Object {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 13,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
        Object {
          "height": 16,
          "width": 16,
        },
        Object {
          "tintColor": "rgb(0, 215, 117)",
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkTextInput should render valid correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "height": 46,
        "paddingLeft": 12,
        "paddingRight": 12,
      },
      undefined,
    ]
  }
>
  <TextInput
    editable={true}
    placeholder="placeholder_text"
    placeholderTextColor="rgb(178, 174, 189)"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "lineHeight": 22,
          "padding": 0,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="Input_text"
  />
  <Image
    source={1}
    style={
      Array [
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
        Object {
          "tintColor": "rgb(0, 215, 117)",
        },
      ]
    }
  />
</View>
`;
